// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`button.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      type="button"
    >
      <span
        class="t-button__text"
      >
        <svg
          class="t-icon t-icon-ellipsis"
        >
          <use
            xlink:href="#t-icon-ellipsis"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`child.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`click.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        hover我试试
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        点击我试试
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`long.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      type="button"
    >
      <span
        class="t-button__text"
      >
        hover我试试
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`multiple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      type="button"
    >
      <span
        class="t-button__text"
      >
        <svg
          class="t-icon t-icon-ellipsis"
        >
          <use
            xlink:href="#t-icon-ellipsis"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`split.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-text"
      type="button"
    >
      <span
        class="t-button__text"
      >
        更多
      </span>
      <span
        class="t-button__suffix"
      >
        <svg
          class="t-icon t-icon-chevron-down"
        >
          <use
            xlink:href="#t-icon-chevron-down"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
